module: updates on work order scan modules
